feat: refatored, finalized for sprint 3.